--- a/package.json
+++ b/package.json
@@ -1,38 +1,47 @@
 {
   "private": true,
+  "sideEffects": false,
+  "type": "module",
   "name": "typesafe-multi-form-action-the-problem",
   "description": "",
   "license": "",
   "scripts": {
-    "build": "cross-env NODE_ENV=production remix build",
-    "start": "cross-env NODE_ENV=production remix-serve build",
-    "dev": "run-p dev:tailwind dev:remix",
-    "dev:tailwind": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
-    "dev:remix": "cross-env NODE_ENV=development remix dev",
-    "ts:check": "tsc --project tsconfig.json"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/node": "^1.19.3",
-    "@remix-run/react": "^1.19.3",
-    "@remix-run/serve": "^1.19.3",
+    "@remix-run/node": "^2.13.1",
+    "@remix-run/react": "^2.13.1",
+    "@remix-run/serve": "^2.13.1",
+    "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.3",
+    "@remix-run/dev": "^2.13.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^9.0.1",
-    "cross-env": "^7.0.3",
-    "npm-run-all": "^4.1.5",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-prettier": "8.10.0",
     "postcss": "^8.4.47",
-    "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9",
+    "vite-tsconfig-paths": "^5.0.1",
+    "prettier": "3.3.3"
   },
   "engines": {
-    "node": ">=14"
-  },
-  "sideEffects": false
+    "node": ">=20.0.0"
+  }
 }
